# grimoire

./: .bazelrc  .gitignore  MODULE.bazel
.clwb/aspects/: cc_info.bzl  intellij_info_bundled.bzl
.zed/: debug.json  tasks.json
bazel/: BUILD.bazel
libraries/canvas/: BUILD.bazel
libraries/canvas/src/: Canvas.cpp  Canvas.h
libraries/touchdesigner/core/: BUILD.bazel
libraries/touchdesigner/core/src/: Canvas.cpp  Canvas.h  FontManager.h  FontManagerLinuxWindows.cpp  FontManagerMacOs.cpp
libraries/touchdesigner/text/: BUILD.bazel
libraries/touchdesigner/text/src/: Components.h  Entity.h  Paintable.h  Painter.cpp  Painter.h  Parameters.cpp  Parameters.h  Plugin.cpp  Plugin.h  Renderer.cpp  Scene.cpp  Scene.h  SigilText.cpp  SigilText.h  Text.cpp  Text.h
libraries/touchdesigner/tiler/: BUILD.bazel
libraries/touchdesigner/tiler/src/: Parameters.cpp  TilerCanvas.h
projects/test-1/tool/: BUILD.bazel
projects/test-1/tool/src/: Context.h  Gui.cpp  ToolCanvas.cpp  ToolCanvas.h  config.h  draw.cpp  draw.h  main.cpp
projects/test-1/top/: BUILD.bazel
projects/test-1/top/src/: CanvasTOP.h  Parameters.h
projects/touchdesigner/text/: BUILD.bazel  Info.plist
projects/touchdesigner/text/benchmarks/: BUILD.bazel  main.cpp  marl_bench.h  text_rendering.cpp
projects/touchdesigner/text/lib/: BUILD.bazel
projects/touchdesigner/text/lib/src/: BitmapBuffer.cpp  BitmapBuffer.h  Buffer.h  BufferProvider.h  Components.h  GpuUtils.h  MetalGpuUtils.mm  Renderer.cpp  Renderer.h  Text.cpp  Text.h  TextSystem.cpp  TextSystem.h
projects/touchdesigner/text/plugin/: BUILD.bazel
projects/touchdesigner/text/plugin/src/: Parameters.h  Plugin.cpp  Plugin.h  TDBuffer.cpp  TDBuffer.h
projects/touchdesigner/text/src/: Parameters.cpp  Renderer.cpp  Text.h  Typography.cpp  Typography.h
projects/touchdesigner/text/tool/: BUILD.bazel
projects/touchdesigner/text/tool/src/: Context.h  Gui.h  LinuxWindow.cpp  MacosWindow.cpp  ToolCanvas.cpp  ToolCanvas.h  Window.h  WindowShared.cpp  main.cpp
touchdesigner/projects/test-1/: .gitignore  BUILD.bazel  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
touchdesigner/projects/test-1/.zed/: debug.json
touchdesigner/projects/test-1/ports/touchdesigner-custom-operators/: portfile.cmake  usage  vcpkg.json
touchdesigner/projects/test-1/src/: CMakeLists.txt  Canvas.cpp  Canvas.h  CanvasTOP.cpp  CanvasTOP.h  SdlDrawable.cpp  SdlDrawable.h  imconfig_overlay.h  main.cpp
