module(
    name = "grimoire",
    version = "0.1.0",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "apple_support", version = "1.24.5", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "4.3.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "gazelle", version = "0.47.0", dev_dependency = True)
bazel_dep(name = "gazelle_cc", version = "0.4.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2")

http_archive(
    name = "sdl3",
    build_file = "@//third_party/sdl3:sdl3.BUILD",
    sha256 = "24a30069af514a6c6b773bdc8ccca8b321661b251381acc1daeebf8c8f4a109a",
    strip_prefix = "SDL3-3.2.28",
    url = "https://github.com/libsdl-org/SDL/releases/download/release-3.2.28/SDL3-3.2.28.zip",
)

http_archive(
    name = "imgui",
    build_file = "@//third_party/imgui:imgui.BUILD",
    sha256 = "999358dd8e78b65900bd49db57b88ae2105ac8d7018d6a52fb9b9ae67f122592",
    strip_prefix = "imgui-1.92.5",
    url = "https://github.com/ocornut/imgui/archive/refs/tags/v1.92.5.zip",
)

http_archive(
    name = "choreograph",
    build_file = "@//third_party/choreograph:choreograph.BUILD",
    url = "https://github.com/sansumbrella/Choreograph/archive/34631980702f5d3745ac29d262712dd81b594ade.zip",
    sha256 = "57d2a2b29813b4d96402d29579d03b6b9ccbea49b8bbed80bbdcd425bafb8d31",
    strip_prefix = "Choreograph-34631980702f5d3745ac29d262712dd81b594ade"
)

http_archive(
    name = "tracy",
    build_file = "@//third_party/tracy:tracy.BUILD",
    sha256 = "a1ecc73b0547512d4bab71278a14581763940118baef835a8033a675f3c8e06d",
    strip_prefix = "tracy-0.13.1",
    url = "https://github.com/wolfpld/tracy/archive/refs/tags/v0.13.1.zip",
)

bazel_dep(name = "touchdesigner")
git_override(
    module_name = "touchdesigner",
    commit = "7050f739ee84fff64e6f839d599d4706b8aad160",
    remote = "https://github.com/ryuuart/touchdesigner-custom-operators.git",
)

bazel_dep(name = "skia")
git_override(
    module_name = "skia",
    commit = "ee20d565acb08dece4a32e3f209cdd41119015ca",
    remote = "https://skia.googlesource.com/skia.git",
)

bazel_dep(name = "skia_user_config")
local_path_override(
    module_name = "skia_user_config",
    path = "third_party/skia/config",
)

bazel_dep(name = "spdlog", version = "1.16.0.bcr.2")

bazel_dep(name = "glm", version = "1.0.2")

bazel_dep(name = "abseil-cpp", version = "20250814.1")

bazel_dep(name = "google_benchmark", version = "1.9.4")
