load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "srcs",
    srcs = [
        "src/Canvas.cpp",
    ],
)

filegroup(
    name = "hdrs",
    srcs = [
        "src/Canvas.h",
    ],
)

cc_library(
    name = "core",
    srcs = [":srcs"],
    hdrs = [":hdrs"],
    includes = ["src"],
    deps = [
        "@skia//:core",
        "@skia//:fontmgr_coretext",
        "@skia//:skparagraph_harfbuzz_skunicode",
        "@skia//:skunicode_icu"
    ],
    visibility = ["//visibility:public"]
)
