cc_library(
    name = "srcs",
    srcs = [
        "src/TilerCanvas.cpp",
        "src/TilerCanvas.h",
        "src/Parameters.cpp",
        "src/Parameters.h",
    ],
    deps = [
        "//libraries/touchdesigner/core",
        "@touchdesigner//top",
    ],
    alwayslink = True,
)

apple_bundle_version(
    name = "version",
    build_version = "0.1",
)

macos_bundle(
    name = "top",
    bundle_extension = "plugin",
    bundle_id = "dev.cybersigilist.sigiltext",
    infoplists = [":Info.plist"],
    minimum_os_version = "26.1",
    version = ":version",
    deps = [
        ":srcs",
    ],
)
