load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "tool",
    srcs = glob(["src/*.cpp", "src/*.h"]),
    copts = ["-I" + package_name() + "/src"],
    deps = [
        "//libraries/canvas",
        "@imgui",
        "@sdl3",
        "@spdlog",
        "@choreograph",
        "@glm"
    ],
)
