load("@rules_apple//apple:macos.doc.bzl", "macos_bundle")
load(
    "@rules_apple//apple:versioning.bzl",
    "apple_bundle_version",
)
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "srcs",
    srcs = [
        "src/Parameters.h",
        "src/Parameters.cpp",
        "src/Typography.h",
        "src/Typography.cpp",
        "src/Plugin.h",
        "src/Plugin.cpp",
        "src/Scene.h",
        "src/Text.h",
        "src/Text.cpp",
        "src/Components.h",
        "src/Renderer.h",
        "src/Renderer.cpp",
    ],
    deps = [
        "//libraries/touchdesigner/core",
        "@touchdesigner//top",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@skia//:core",
        "@skia//:fontmgr_coretext",
        "@skia//:skunicode_icu",
        "@skia//:skshaper_harfbuzz"
    ],
    alwayslink = True,
)

apple_bundle_version(
    name = "version",
    build_version = "0.1",
)

macos_bundle(
    name = "text",
    bundle_extension = "plugin",
    bundle_id = "dev.cybersigilist.sigiltext",
    infoplists = [":Info.plist"],
    minimum_os_version = "26.1",
    version = ":version",
    deps = [
        ":srcs",
    ],
)
