load("@rules_apple//apple:macos.doc.bzl", "macos_bundle")
load(
    "@rules_apple//apple:versioning.bzl",
    "apple_bundle_version",
)
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "srcs",
    srcs = [
        "src/Components.h",
        "src/Parameters.cpp",
        "src/Parameters.h",
        "src/Plugin.cpp",
        "src/Plugin.h",
        "src/Renderer.cpp",
        "src/Renderer.h",
        "src/Scene.h",
        "src/Text.cpp",
        "src/Text.h",
        "src/Typography.cpp",
        "src/Typography.h",
    ],
    deps = [
        "//libraries/touchdesigner/core",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@skia//:core",
        "@skia//:skshaper_core",
        "@skia//:skshaper_harfbuzz",
        "@skia//:skshaper_unicode",
        "@skia//:skunicode_icu",
        "@touchdesigner//top",
    ],
    alwayslink = True,
)

apple_bundle_version(
    name = "version",
    build_version = "0.1",
)

macos_bundle(
    name = "text",
    bundle_extension = "plugin",
    bundle_id = "dev.cybersigilist.sigiltext",
    infoplists = [":Info.plist"],
    minimum_os_version = "26.1",
    version = ":version",
    deps = [
        ":srcs",
    ],
)
