load("@rules_apple//apple:macos.doc.bzl", "macos_bundle", "macos_dylib")
load(
    "@rules_apple//apple:versioning.bzl",
    "apple_bundle_version",
)
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

filegroup(
    name = "canvas_srcs",
    srcs = [
        "src/Canvas.cpp",
    ],
)

filegroup(
    name = "canvas_hdrs",
    srcs = [
        "src/Canvas.h",
    ],
)

cc_library(
    name = "canvas",
    srcs = [":canvas_srcs"],
    hdrs = [":canvas_hdrs"],
    includes = ["src"],
    deps = [
        "@skia//:core",
        "@skia//:fontmgr_coretext",
    ],
)

cc_binary(
    name = "CanvasTOPTool",
    srcs = [
        "src/SdlDrawable.cpp",
        "src/SdlDrawable.h",
        "src/imconfig_overlay.h",
        "src/main.cpp",
    ],
    copts = ["-I" + package_name() + "/src"],
    deps = [
        ":canvas",
        "@imgui",
        "@sdl3",
        "@spdlog",
    ],
)

cc_library(
    name = "CanvasTOPSrcs",
    srcs = [
        "src/CanvasTOP.cpp",
        "src/CanvasTOP.h",
        "src/Parameters.cpp",
        "src/Parameters.h",
    ],
    deps = [
        ":canvas",
        "@touchdesigner//top",
    ],
    alwayslink = True,
)

apple_bundle_version(
    name = "CanvasTOPVersion",
    build_version = "0.1",
)

macos_bundle(
    name = "CanvasTOP",
    bundle_extension = "plugin",
    bundle_id = "dev.long-nguyen.touchdesigner.test-1",
    infoplists = [":Info.plist"],
    minimum_os_version = "26.1",
    version = ":CanvasTOPVersion",
    deps = [
        ":CanvasTOPSrcs",
    ],
)
