load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "lib",
    srcs = [
        "src/Renderer.cpp",
        "src/TextSystem.cpp",
        "src/Typography.cpp",
    ],
    hdrs = [
        "src/BufferProvider.h",
        "src/Components.h",
        "src/Renderer.h",
        "src/Scene.h",
        "src/Text.h",
        "src/TextSystem.h",
        "src/Typography.h",
    ],
    defines = [
        #        "USE_SKIA_SHAPED_TEXT",
        "USE_SKIA_PARAGRAPH_TEXT",
    ],
    includes = ["src"],
    visibility = ["//projects/touchdesigner/text:__subpackages__"],
    deps = [
        "//libraries/touchdesigner/core",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@glm",
        "@marl",
        "@skia//:core",
        "@skia//:skparagraph_harfbuzz_skunicode",
        "@skia//:skshaper_core",
        "@skia//:skshaper_harfbuzz",
        "@skia//:skshaper_unicode",
        "@skia//:skunicode_icu",
    ],
)
